# Reversi

./: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  CMakeLists.txt  Enum.h  Game.cpp  Game.h  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Point.cpp  Point.h  README.md  StandartGameLogic.cpp  StandartGameLogic.h  info.txt  main.cpp  makefile  בחירה של פרוייקט
Tests/: AIPlayerTest.h  BoardTest.h  ClientTests.cpp  ServerTests.cpp  StandartGameLogicTest.h  Tests.cpp  gtest_main.cpp
exe/: serverInfo.txt
src/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  ConsoleBoard.cpp  ConsoleBoard.h  ConsolePrinter.cpp  ConsolePrinter.h  Enum.h  Game.cpp  Game.h  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Point.cpp  Point.h  Printer.h  StandartGameLogic.cpp  StandartGameLogic.h  main.cpp
src/client/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  ConsolePrinter.cpp  ConsolePrinter.h  Enum.h  Game.cpp  Game.h  GameLogic.h  HumanPlayer.cpp  HumanPlayer.h  LocalGame.cpp  LocalGame.h  Player.h  Point.h  Printer.h  ServerGame.cpp  ServerGame.h  ServerPlayer.cpp  ServerPlayer.h  StandartGameLogic.cpp  StandartGameLogic.h  main.cpp  makefile  serverInfo.txt
src/server/: CloseGameCommand.cpp  CloseGameCommand.h  Command.h  CommandsManager.cpp  CommandsManager.h  Game.cpp  Game.h  GameServer.cpp  GameServer.h  GetGameListCommand.cpp  GetGameListCommand.h  Handler.cpp  Handler.h  JoinGameCommand.cpp  JoinGameCommand.h  MakeMoveCommand.cpp  MakeMoveCommand.h  Server.cpp  Server.h  StartCommand.cpp  StartCommand.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile  server settings
